syntax = "proto3";

option csharp_namespace = "Grpc.ProductSyncService";

package GrpcProductEndPoint;

service GrpcProduct{
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
}

message GetByIdRequest{
  string id = 1;
}

message GetByIdResponse{
  string id = 1;
  string name = 2;
  string typeId = 3;
}